Fixed skinOverflow check and media queries

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1347,7 +1347,7 @@ div.knife {
 		height: 160px;
 	}
 
-	.modalMain {
+	.modalMain.unbox {
     position: absolute;
     top: 0;
     right: 0;
@@ -1358,6 +1358,10 @@ div.knife {
     width: 500px;
     background: #101619;
     border: 1px #186144 solid;
+	}
+
+	.modalMain.winner {
+		transform: scale(.75);
 	}
 
 	.modalClose.unbox {
@@ -1385,7 +1389,7 @@ div.knife {
     overflow: hidden;
 	}
 
-	.modalMain img {
+	.modalMain > img {
     display: block;
     height: 200px;
     width: 200px;
